force-app/main/default/objects/Container__c/Container__c.object-meta.xml
<CustomObject>
    <label>Notas/Listas</label>
    <nameField>
        <label>Nombre de Notas Listas</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Notes / Lists</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>