force-app/main/default/objects/Container__c/fields/isBlocked__c.field-meta.xml
<CustomField>
    <fullName>isBlocked__c</fullName>
    <formula>NOT(ISBLANK(LastBlockedBy__c)) &amp;&amp; (((NOW() -  LastBlockedDate__c  ) * 24 * 60 * 60 ) &lt; 300 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>¿Bloqueado?</label>
    <type>Checkbox</type>
</CustomField>