force-app/main/default/objects/Container__c/fields/LastBlockedBy__c.field-meta.xml
<CustomField>
    <fullName>LastBlockedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bloqueado por</label>
    <referenceTo>User</referenceTo>
    <relationshipName>NotesLists</relationshipName>
    <type>Lookup</type>
</CustomField>