force-app/main/default/objects/Container__c/fields/Milisenconds__c.field-meta.xml
<CustomField>
    <fullName>Milisenconds__c</fullName>
    <formula>(NOW() -  LastBlockedDate__c  ) * 24 * 60 * 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Milisenconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>