force-app/main/default/objects/Container__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nota</fullName>
            </value>
            <value>
                <fullName>Lista</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>